Replace docker-compose.prod.yml with nginx gateway configuration for Coolify

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,97 +1,84 @@
 version: '3.8'
 
-# Full Stack Docker Compose for Coolify
-# Includes backends and frontends
-
 services:
+  # Nginx Gateway - Single entry point for Coolify
+  nginx:
+    image: nginx:alpine
+    container_name: teloo-nginx-gateway
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.coolify.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - core-api
+      - analytics
+    networks:
+      - teloo-network
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:80/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
+
   # Database Services
   postgres:
     image: postgres:15-alpine
     container_name: teloo-postgres
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-teloo_production}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: teloo_production
+      POSTGRES_USER: teloo_admin
+      POSTGRES_PASSWORD: Teloo2025.
       TZ: America/Bogota
       PGTZ: UTC
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - teloo-network
-    restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U teloo_admin -d teloo_production"]
       interval: 30s
       timeout: 10s
       retries: 3
-    ports:
-      - "7010:5432"
 
   redis:
     image: redis:7-alpine
     container_name: teloo-redis
-    command: redis-server --appendonly yes
+    environment:
+      TZ: America/Bogota
     volumes:
       - redis_data:/data
     networks:
       - teloo-network
-    restart: unless-stopped
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 30s
       timeout: 10s
       retries: 3
-    ports:
-      - "7011:6379"
 
-  minio:
-    image: minio/minio:latest
-    container_name: teloo-minio
-    ports:
-      - "7007:9000"
-      - "7008:9001"
-    environment:
-      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
-      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
-    volumes:
-      - minio_data:/data
-    networks:
-      - teloo-network
-    command: server /data --console-address ":9001"
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
-  # Core Services
+  # Core API Service
   core-api:
     build:
       context: ./services/core-api
       dockerfile: Dockerfile
     container_name: teloo-core-api
-    ports:
-      - "7002:8000"
     environment:
-      - SERVICE_NAME=core-api
-      - DATABASE_URL=${DATABASE_URL}
-      - REDIS_URL=${REDIS_URL}
-      - MINIO_ENDPOINT=minio:9000
-      - MINIO_ACCESS_KEY=${MINIO_ROOT_USER}
-      - MINIO_SECRET_KEY=${MINIO_ROOT_PASSWORD}
+      - DATABASE_URL=postgres://teloo_admin:Teloo2025.@postgres:5432/teloo_production
+      - REDIS_URL=redis://redis:6379
       - JWT_SECRET_KEY=${JWT_SECRET_KEY}
-      - JWT_ALGORITHM=${JWT_ALGORITHM}
-      - ENVIRONMENT=${ENVIRONMENT:-production}
-      - LOG_LEVEL=${LOG_LEVEL:-INFO}
-      - CORS_ORIGINS=${CORS_ORIGINS}
+      - ENVIRONMENT=production
+      - BACKEND_CORS_ORIGINS=${BACKEND_CORS_ORIGINS}
+      - AGENT_IA_API_KEY=${AGENT_IA_API_KEY}
+      - ANALYTICS_API_KEY=${ANALYTICS_API_KEY}
+    expose:
+      - "8000"
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     networks:
       - teloo-network
-    depends_on:
-      - postgres
-      - redis
-      - minio
-    restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
@@ -99,104 +86,36 @@ services:
       retries: 3
       start_period: 40s
 
-  agent-ia:
-    build:
-      context: ./services/agent-ia
-      dockerfile: Dockerfile
-    container_name: teloo-agent-ia
-    ports:
-      - "7003:8000"
-    environment:
-      - SERVICE_NAME=agent-ia
-      - CORE_API_URL=http://core-api:8000
-      - REDIS_URL=${REDIS_URL}
-      - ENVIRONMENT=${ENVIRONMENT:-production}
-      - LOG_LEVEL=${LOG_LEVEL:-INFO}
-    networks:
-      - teloo-network
-    depends_on:
-      core-api:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-    restart: unless-stopped
-
+  # Analytics Service
   analytics:
     build:
       context: ./services/analytics
       dockerfile: Dockerfile
     container_name: teloo-analytics
-    ports:
-      - "7004:8000"
     environment:
-      - SERVICE_NAME=analytics
-      - DATABASE_URL=${DATABASE_URL}
-      - REDIS_URL=${REDIS_URL}
-      - ENVIRONMENT=${ENVIRONMENT:-production}
-      - LOG_LEVEL=${LOG_LEVEL:-INFO}
-    networks:
-      - teloo-network
+      - DATABASE_URL=postgres://teloo_admin:Teloo2025.@postgres:5432/teloo_production
+      - REDIS_URL=redis://redis:6379
+      - ENVIRONMENT=production
+      - BACKEND_CORS_ORIGINS=${BACKEND_CORS_ORIGINS}
+    expose:
+      - "8002"
     depends_on:
       postgres:
         condition: service_healthy
       redis:
         condition: service_healthy
-      core-api:
-        condition: service_healthy
-    restart: unless-stopped
-
-  realtime-gateway:
-    build:
-      context: ./services/realtime-gateway
-      dockerfile: Dockerfile
-    container_name: teloo-realtime
-    ports:
-      - "7005:8000"
-    environment:
-      - SERVICE_NAME=realtime-gateway
-      - REDIS_URL=${REDIS_URL}
-      - JWT_SECRET_KEY=${JWT_SECRET_KEY}
-      - ENVIRONMENT=${ENVIRONMENT:-production}
-      - LOG_LEVEL=${LOG_LEVEL:-INFO}
     networks:
       - teloo-network
-    depends_on:
-      redis:
-        condition: service_healthy
-      core-api:
-        condition: service_healthy
-    restart: unless-stopped
-
-  files:
-    build:
-      context: ./services/files
-      dockerfile: Dockerfile
-    container_name: teloo-files
-    ports:
-      - "7006:8000"
-    environment:
-      - SERVICE_NAME=files
-      - MINIO_ENDPOINT=minio:9000
-      - MINIO_ACCESS_KEY=${MINIO_ROOT_USER}
-      - MINIO_SECRET_KEY=${MINIO_ROOT_PASSWORD}
-      - REDIS_URL=${REDIS_URL}
-      - ENVIRONMENT=${ENVIRONMENT:-production}
-      - LOG_LEVEL=${LOG_LEVEL:-INFO}
-    networks:
-      - teloo-network
-    depends_on:
-      minio:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-      core-api:
-        condition: service_healthy
-    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8002/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
 volumes:
   postgres_data:
   redis_data:
-  minio_data:
 
 networks:
   teloo-network:
