--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,8 +7,8 @@ services:
       context: ./nginx
       dockerfile: Dockerfile
     container_name: teloo-nginx-gateway
-    ports:
-      - "80:80"
+    expose:
+      - "80"
     depends_on:
       - core-api
       - analytics
