Secure CORS: restrict to specific allowed origins only

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,10 +16,11 @@ http {
         server analytics:8002;
     }
 
-    # Map to handle CORS
-    map $request_method $cors_method {
-        OPTIONS 1;
-        default 0;
+    # Map to validate allowed origins
+    map $http_origin $cors_origin {
+        default "";
+        "~^http://rcsg4sg84kkso80gcko0gw4o\.72\.62\.130\.152\.sslip\.io$" $http_origin;
+        "~^http://[a-z0-9]+\.72\.62\.130\.152\.sslip\.io$" $http_origin;
     }
 
     server {
@@ -42,7 +43,7 @@ http {
         location /auth/ {
             # Handle preflight requests
             if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' '$http_origin' always;
+                add_header 'Access-Control-Allow-Origin' '$cors_origin' always;
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept' always;
                 add_header 'Access-Control-Allow-Credentials' 'true' always;
@@ -62,12 +63,8 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
             
-            # Pass through CORS headers from backend
-            proxy_hide_header 'Access-Control-Allow-Origin';
-            proxy_hide_header 'Access-Control-Allow-Methods';
-            proxy_hide_header 'Access-Control-Allow-Headers';
-            proxy_hide_header 'Access-Control-Allow-Credentials';
-            add_header 'Access-Control-Allow-Origin' '$http_origin' always;
+            # Add CORS headers only for allowed origins
+            add_header 'Access-Control-Allow-Origin' '$cors_origin' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept' always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
@@ -77,7 +74,7 @@ http {
         location /api/ {
             # Handle preflight requests
             if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' '$http_origin' always;
+                add_header 'Access-Control-Allow-Origin' '$cors_origin' always;
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept' always;
                 add_header 'Access-Control-Allow-Credentials' 'true' always;
@@ -97,12 +94,8 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
             
-            # Pass through CORS headers from backend
-            proxy_hide_header 'Access-Control-Allow-Origin';
-            proxy_hide_header 'Access-Control-Allow-Methods';
-            proxy_hide_header 'Access-Control-Allow-Headers';
-            proxy_hide_header 'Access-Control-Allow-Credentials';
-            add_header 'Access-Control-Allow-Origin' '$http_origin' always;
+            # Add CORS headers only for allowed origins
+            add_header 'Access-Control-Allow-Origin' '$cors_origin' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept' always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
@@ -112,7 +105,7 @@ http {
         location /analytics/ {
             # Handle preflight requests
             if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' '$http_origin' always;
+                add_header 'Access-Control-Allow-Origin' '$cors_origin' always;
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept' always;
                 add_header 'Access-Control-Allow-Credentials' 'true' always;
@@ -132,12 +125,8 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
             
-            # Pass through CORS headers from backend
-            proxy_hide_header 'Access-Control-Allow-Origin';
-            proxy_hide_header 'Access-Control-Allow-Methods';
-            proxy_hide_header 'Access-Control-Allow-Headers';
-            proxy_hide_header 'Access-Control-Allow-Credentials';
-            add_header 'Access-Control-Allow-Origin' '$http_origin' always;
+            # Add CORS headers only for allowed origins
+            add_header 'Access-Control-Allow-Origin' '$cors_origin' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept' always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
