Fix CORS origin regex pattern

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,8 +19,8 @@ http {
     # Map to validate allowed origins
     map $http_origin $cors_origin {
         default "";
-        "~^http://rcsg4sg84kkso80gcko0gw4o\.72\.62\.130\.152\.sslip\.io$" $http_origin;
-        "~^http://[a-z0-9]+\.72\.62\.130\.152\.sslip\.io$" $http_origin;
+        "http://rcsg4sg84kkso80gcko0gw4o.72.62.130.152.sslip.io" $http_origin;
+        "~^http://.*\.72\.62\.130\.152\.sslip\.io$" $http_origin;
     }
 
     server {
