--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,11 +16,11 @@ http {
         server analytics:8002;
     }
 
-    # Map to validate allowed origins
+    # Map to validate allowed origins - ONLY your Coolify frontends
     map $http_origin $cors_origin {
         default "";
         "http://rcsg4sg84kkso80gcko0gw4o.72.62.130.152.sslip.io" $http_origin;
-        "~^http://.*\.72\.62\.130\.152\.sslip\.io$" $http_origin;
+        "http://g0k48wkwowwokcgoc480oo4g.72.62.130.152.sslip.io" $http_origin;
     }
 
     server {
