--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,7 +13,19 @@ http {
     }
 
     upstream analytics {
-        server analytics:8002;
+        server analytics:8000;
+    }
+
+    upstream files {
+        server files:8000;
+    }
+
+    upstream agent-ia {
+        server agent-ia:8000;
+    }
+
+    upstream realtime {
+        server realtime-gateway:8000;
     }
 
     # Map to validate allowed origins - ONLY your Coolify frontends
@@ -132,15 +144,108 @@ http {
             add_header 'Access-Control-Allow-Credentials' 'true' always;
         }
 
+        # Route /files/* to Files Service
+        location /files/ {
+            # Handle preflight requests
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '$cors_origin' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept' always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+
+            proxy_pass http://files/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            
+            # Add CORS headers only for allowed origins
+            add_header 'Access-Control-Allow-Origin' '$cors_origin' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+        }
+
+        # Route /agent-ia/* to Agent IA Service
+        location /agent-ia/ {
+            # Handle preflight requests
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '$cors_origin' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept' always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+
+            proxy_pass http://agent-ia/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            
+            # Add CORS headers only for allowed origins
+            add_header 'Access-Control-Allow-Origin' '$cors_origin' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+        }
+
+        # Route /realtime/* to Realtime Gateway Service
+        location /realtime/ {
+            # Handle preflight requests
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '$cors_origin' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept' always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+
+            proxy_pass http://realtime/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            
+            # Add CORS headers only for allowed origins
+            add_header 'Access-Control-Allow-Origin' '$cors_origin' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+        }
+
         # Root endpoint - show routing info
         location = / {
-            return 200 '{"service":"TeLOO V3 Gateway","routes":{"/api":"Backend Core API","/analytics":"Analytics Service","/auth":"Authentication"}}\n';
+            return 200 '{"service":"TeLOO V3 Gateway","routes":{"/api":"Backend Core API","/analytics":"Analytics Service","/auth":"Authentication","/files":"Files Service","/agent-ia":"Agent IA Service","/realtime":"Realtime Gateway"}}\n';
             add_header Content-Type application/json;
         }
 
         # Default - return 404
         location / {
-            return 404 '{"error":"Not Found","message":"Use /api/* for Backend, /analytics/* for Analytics, or /auth/* for Authentication"}\n';
+            return 404 '{"error":"Not Found","message":"Use /api/* for Backend, /analytics/* for Analytics, /auth/* for Authentication, /files/* for Files, /agent-ia/* for Agent IA, or /realtime/* for Realtime Gateway"}\n';
             add_header Content-Type application/json;
         }
     }
