Fix nginx map_hash_bucket_size for long Coolify domains

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,6 +3,9 @@ events {
 }
 
 http {
+    # Fix for long domain names
+    map_hash_bucket_size 128;
+    
     # Logging
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
