fix: nginx health check and upstream resilience for Coolify

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,25 +10,27 @@ http {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
-    # Upstream servers
+    # Upstream servers with resolver for dynamic DNS
+    resolver 127.0.0.11 valid=10s;
+    
     upstream backend {
-        server core-api:8000;
+        server core-api:8000 max_fails=3 fail_timeout=30s;
     }
 
     upstream analytics {
-        server analytics:8000;
+        server analytics:8000 max_fails=3 fail_timeout=30s;
     }
 
     upstream files {
-        server files:8000;
+        server files:8000 max_fails=3 fail_timeout=30s;
     }
 
     upstream agent-ia {
-        server agent-ia:8000;
+        server agent-ia:8000 max_fails=3 fail_timeout=30s;
     }
 
     upstream realtime {
-        server realtime-gateway:8000;
+        server realtime-gateway:8000 max_fails=3 fail_timeout=30s;
     }
 
     # Map to validate allowed origins - ONLY your Coolify frontends
