fix: use dynamic DNS resolution in nginx to prevent startup failures

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,28 +10,8 @@ http {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
-    # Upstream servers with resolver for dynamic DNS
-    resolver 127.0.0.11 valid=10s;
-    
-    upstream backend {
-        server core-api:8000 max_fails=3 fail_timeout=30s;
-    }
-
-    upstream analytics {
-        server analytics:8000 max_fails=3 fail_timeout=30s;
-    }
-
-    upstream files {
-        server files:8000 max_fails=3 fail_timeout=30s;
-    }
-
-    upstream agent-ia {
-        server agent-ia:8000 max_fails=3 fail_timeout=30s;
-    }
-
-    upstream realtime {
-        server realtime-gateway:8000 max_fails=3 fail_timeout=30s;
-    }
+    # DNS resolver for Docker internal DNS
+    resolver 127.0.0.11 valid=10s ipv6=off;
 
     # Map to validate allowed origins - ONLY your Coolify frontends
     map $http_origin $cors_origin {
@@ -70,7 +50,8 @@ http {
                 return 204;
             }
 
-            proxy_pass http://backend/auth/;
+            set $backend_upstream core-api:8000;
+            proxy_pass http://$backend_upstream/auth/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -101,7 +82,8 @@ http {
                 return 204;
             }
 
-            proxy_pass http://backend/;
+            set $backend_upstream core-api:8000;
+            proxy_pass http://$backend_upstream/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -132,7 +114,8 @@ http {
                 return 204;
             }
 
-            proxy_pass http://analytics/;
+            set $analytics_upstream analytics:8000;
+            proxy_pass http://$analytics_upstream/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -163,7 +146,8 @@ http {
                 return 204;
             }
 
-            proxy_pass http://files/;
+            set $files_upstream files:8000;
+            proxy_pass http://$files_upstream/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -194,7 +178,8 @@ http {
                 return 204;
             }
 
-            proxy_pass http://agent-ia/;
+            set $agentia_upstream agent-ia:8000;
+            proxy_pass http://$agentia_upstream/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -225,7 +210,8 @@ http {
                 return 204;
             }
 
-            proxy_pass http://realtime/;
+            set $realtime_upstream realtime-gateway:8000;
+            proxy_pass http://$realtime_upstream/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
