fix: Add Coolify labels to identify nginx as main service and others as internal services

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,7 +10,8 @@ services:
     labels:
       - "coolify.managed=true"
       - "coolify.type=application"
-    expose:
+      - "coolify.main=true"
+    ports:
       - "80"
     depends_on:
       - core-api
@@ -89,6 +90,9 @@ services:
       context: ./services/core-api
       dockerfile: Dockerfile
     container_name: teloo-core-api
+    labels:
+      - "coolify.managed=true"
+      - "coolify.type=service"
     environment:
       - SERVICE_NAME=core-api
       - DATABASE_URL=postgres://teloo_admin:Teloo2025.@postgres:5432/teloo_production
@@ -125,6 +129,9 @@ services:
       context: ./services/analytics
       dockerfile: Dockerfile
     container_name: teloo-analytics
+    labels:
+      - "coolify.managed=true"
+      - "coolify.type=service"
     environment:
       - SERVICE_NAME=analytics
       - DATABASE_URL=postgres://teloo_admin:Teloo2025.@postgres:5432/teloo_production
@@ -155,6 +162,9 @@ services:
       context: ./services/agent-ia
       dockerfile: Dockerfile
     container_name: teloo-agent-ia
+    labels:
+      - "coolify.managed=true"
+      - "coolify.type=service"
     environment:
       - SERVICE_NAME=agent-ia
       - CORE_API_URL=http://core-api:8000
@@ -176,6 +186,9 @@ services:
       context: ./services/realtime-gateway
       dockerfile: Dockerfile
     container_name: teloo-realtime
+    labels:
+      - "coolify.managed=true"
+      - "coolify.type=service"
     environment:
       - SERVICE_NAME=realtime-gateway
       - REDIS_URL=redis://redis:6379
@@ -197,6 +210,9 @@ services:
       context: ./services/files
       dockerfile: Dockerfile
     container_name: teloo-files
+    labels:
+      - "coolify.managed=true"
+      - "coolify.type=service"
     environment:
       - SERVICE_NAME=files
       - MINIO_ENDPOINT=minio:9000
