fix(config): corregir dominio API a .cloud y asegurar https

--- a/frontend/admin/.env.production
+++ b/frontend/admin/.env.production
@@ -1,10 +1,10 @@
 # Admin Frontend - Production Environment
 
 # API Configuration
-VITE_API_URL=https://api.teloo.com
-VITE_ANALYTICS_API_URL=https://api.teloo.com/analytics
-VITE_REALTIME_URL=https://api.teloo.com/realtime
-VITE_FILES_URL=https://api.teloo.com/files
+VITE_API_URL=https://api.teloo.cloud
+VITE_ANALYTICS_API_URL=https://api.teloo.cloud/analytics
+VITE_REALTIME_URL=https://api.teloo.cloud/realtime
+VITE_FILES_URL=https://api.teloo.cloud/files
 
 # Application Configuration
 VITE_APP_NAME=TeLOO Admin
