--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -99,7 +99,7 @@ http {
     # HTTP to HTTPS redirect
     server {
         listen 80;
-        server_name teloo.com www.teloo.com api.teloo.com;
+        server_name teloo.cloud www.teloo.cloud api.teloo.cloud;
         
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
@@ -113,11 +113,11 @@ http {
     # Main application - HTTPS
     server {
         listen 443 ssl http2;
-        server_name teloo.com www.teloo.com;
+        server_name teloo.cloud www.teloo.cloud;
 
         # SSL configuration
-        ssl_certificate /etc/nginx/ssl/teloo.com.crt;
-        ssl_certificate_key /etc/nginx/ssl/teloo.com.key;
+        ssl_certificate /etc/nginx/ssl/teloo.cloud.crt;
+        ssl_certificate_key /etc/nginx/ssl/teloo.cloud.key;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
@@ -130,7 +130,7 @@ http {
         add_header X-Frame-Options "DENY" always;
         add_header Referrer-Policy "no-referrer" always;
         add_header Permissions-Policy "camera=(), microphone=(), geolocation=()" always;
-        add_header Content-Security-Policy "default-src 'self'; img-src 'self' data:; script-src 'self'; style-src 'self' 'unsafe-inline'; connect-src https://api.teloo.com https://ws.teloo.com" always;
+        add_header Content-Security-Policy "default-src 'self'; img-src 'self' data:; script-src 'self'; style-src 'self' 'unsafe-inline'; connect-src https://api.teloo.cloud https://ws.teloo.cloud" always;
 
         # Admin frontend
         location /admin {
@@ -186,11 +186,11 @@ http {
     # API server - HTTPS
     server {
         listen 443 ssl http2;
-        server_name api.teloo.com;
+        server_name api.teloo.cloud;
 
         # SSL configuration
-        ssl_certificate /etc/nginx/ssl/teloo.com.crt;
-        ssl_certificate_key /etc/nginx/ssl/teloo.com.key;
+        ssl_certificate /etc/nginx/ssl/teloo.cloud.crt;
+        ssl_certificate_key /etc/nginx/ssl/teloo.cloud.key;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
@@ -203,7 +203,7 @@ http {
         add_header Permissions-Policy "camera=(), microphone=(), geolocation=()" always;
 
         # CORS headers
-        add_header Access-Control-Allow-Origin "https://teloo.com" always;
+        add_header Access-Control-Allow-Origin "https://teloo.cloud" always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
         add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
         add_header Access-Control-Max-Age 3600 always;
@@ -227,6 +227,19 @@ http {
             proxy_read_timeout 300s;
             proxy_connect_timeout 75s;
             proxy_buffering off;
+        }
+
+        # Analytics Service
+        location /analytics/ {
+            limit_req zone=api_limit burst=20 nodelay;
+            
+            proxy_pass http://analytics;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 300s;
         }
 
         # Authentication endpoints (stricter rate limiting)
