--- a/frontend/admin/.env.production
+++ b/frontend/admin/.env.production
@@ -2,9 +2,9 @@
 
 # API Configuration
 VITE_API_URL=https://api.teloo.cloud
-VITE_ANALYTICS_API_URL=https://api.teloo.cloud/analytics
-VITE_REALTIME_URL=https://api.teloo.cloud/realtime
-VITE_FILES_URL=https://api.teloo.cloud/files
+VITE_ANALYTICS_API_URL=https://analytics.teloo.cloud
+VITE_REALTIME_URL=https://socket.teloo.cloud
+VITE_FILES_URL=https://files.teloo.cloud
 
 # Application Configuration
 VITE_APP_NAME=TeLOO Admin
